syntax = "proto3";

package server.profile;

message DeleteProfileRequest {
  int32 id = 1; // required
}

message DeleteProfileResponse {}

